<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mryawnie.sskip.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_list_title"
        android:id="@+id/versionListTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_list"
        android:layout_below="@+id/versionListTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/versionList"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_list"
        android:layout_below="@+id/versionList"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/featureList"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tested_versions"
        android:layout_below="@+id/featureList"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/testedVersions"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:layout_below="@+id/testedVersions"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:id="@+id/support"
            android:onClick="openBrowser"
            android:tag="https://www.reddit.com/r/xposed/comments/4qo1zv/release_spotifyskip_v20_w_latest_spotify_support/"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:id="@+id/donate"
            android:clickable="false"
            android:src="@drawable/donate"
            android:tag="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=375ZG9DY9ZAEC&amp;lc=FI&amp;item_name=SpotifySkip&amp;currency_code=EUR&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted"
            android:onClick="openBrowser"
            android:layout_above="@+id/logo"
            android:layout_marginBottom="-70dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/logo"
            android:contentDescription="@string/support"
            android:clickable="false"
        android:src="@drawable/logo"
            android:layout_alignBottom="@+id/credits2"
            android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:id="@+id/credits"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_above="@+id/credits2"
        android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits2"
            android:id="@+id/credits2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

</RelativeLayout>
</ScrollView>